[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/theme/kenneyUI.tres" type="Theme" id=1]
[ext_resource path="res://ui/DefaultBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://engine/Character Creator/PlayerCreator/PlayerCreation.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/tiles/groundtile/GroundTile.tscn" type="PackedScene" id=4]
[ext_resource path="res://engine/Character Creator/CreationScreen.gd" type="Script" id=5]

[node name="CreationScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DefaultBackground" parent="." instance=ExtResource( 2 )]
position = Vector2( 444, 205 )
scale = Vector2( 2.42656, 2.13947 )

[node name="GroundTile" parent="." instance=ExtResource( 4 )]
tile_data = PoolIntArray( 196602, 0, 0, 196603, 0, 1, 196604, 0, 1, 196605, 0, 2, 262138, 0, 65536, 262139, 0, 65537, 262140, 0, 65537, 262141, 0, 65538, 196632, 0, 0, 196633, 0, 1, 196634, 0, 1, 196635, 0, 1, 196636, 0, 1, 196637, 0, 1, 196638, 0, 2, 327674, 0, 65536, 327675, 0, 65537, 327676, 0, 65537, 327677, 0, 65538, 262168, 0, 65536, 262169, 0, 65537, 262170, 0, 65537, 262171, 0, 65537, 262172, 0, 65537, 262173, 0, 65537, 262174, 0, 65538, 393210, 0, 65536, 393211, 0, 65537, 393212, 0, 65537, 393213, 0, 65538, 327704, 0, 65536, 327705, 0, 65537, 327706, 0, 65537, 327707, 0, 65537, 327708, 0, 65537, 327709, 0, 65537, 327710, 0, 65538, 458746, 0, 65536, 458747, 0, 65537, 458748, 0, 65537, 458749, 0, 65538, 393240, 0, 65536, 393241, 0, 65537, 393242, 0, 65537, 393243, 0, 65537, 393244, 0, 65537, 393245, 0, 65537, 393246, 0, 65538, 524282, 0, 65536, 524283, 0, 65537, 524284, 0, 65537, 524285, 0, 65538, 458776, 0, 65536, 458777, 0, 65537, 458778, 0, 65537, 458779, 0, 65537, 458780, 0, 65537, 458781, 0, 65537, 458782, 0, 65538, 589818, 0, 65536, 589819, 0, 65537, 589820, 0, 65537, 589821, 0, 65538, 524312, 0, 65536, 524313, 0, 65537, 524314, 0, 65537, 524315, 0, 65537, 524316, 0, 65537, 524317, 0, 65537, 524318, 0, 65538, 655354, 0, 65536, 655355, 0, 65537, 655356, 0, 65537, 655357, 0, 131077, 655358, 0, 1, 655359, 0, 1, 589824, 0, 1, 589825, 0, 1, 589826, 0, 1, 589827, 0, 1, 589828, 0, 1, 589829, 0, 1, 589830, 0, 1, 589831, 0, 1, 589832, 0, 1, 589833, 0, 1, 589834, 0, 1, 589835, 0, 1, 589836, 0, 1, 589837, 0, 1, 589838, 0, 1, 589839, 0, 1, 589840, 0, 1, 589841, 0, 1, 589842, 0, 1, 589843, 0, 1, 589844, 0, 1, 589845, 0, 1, 589846, 0, 1, 589847, 0, 1, 589848, 0, 131078, 589849, 0, 65537, 589850, 0, 65537, 589851, 0, 65537, 589852, 0, 65537, 589853, 0, 65537, 589854, 0, 65538, 720890, 0, 65536, 720891, 0, 65537, 720892, 0, 65537, 720893, 0, 65537, 720894, 0, 65537, 720895, 0, 65537, 655360, 0, 65537, 655361, 0, 65537, 655362, 0, 65537, 655363, 0, 65537, 655364, 0, 65537, 655365, 0, 65537, 655366, 0, 65537, 655367, 0, 65537, 655368, 0, 65537, 655369, 0, 65537, 655370, 0, 65537, 655371, 0, 65537, 655372, 0, 65537, 655373, 0, 65537, 655374, 0, 65537, 655375, 0, 65537, 655376, 0, 65537, 655377, 0, 65537, 655378, 0, 65537, 655379, 0, 65537, 655380, 0, 65537, 655381, 0, 65537, 655382, 0, 65537, 655383, 0, 65537, 655384, 0, 65537, 655385, 0, 65537, 655386, 0, 65537, 655387, 0, 65537, 655388, 0, 65537, 655389, 0, 65537, 655390, 0, 65538, 786426, 0, 65536, 786427, 0, 65537, 786428, 0, 65537, 786429, 0, 65537, 786430, 0, 65537, 786431, 0, 65537, 720896, 0, 65537, 720897, 0, 65537, 720898, 0, 65537, 720899, 0, 65537, 720900, 0, 65537, 720901, 0, 65537, 720902, 0, 65537, 720903, 0, 65537, 720904, 0, 65537, 720905, 0, 65537, 720906, 0, 65537, 720907, 0, 65537, 720908, 0, 65537, 720909, 0, 65537, 720910, 0, 65537, 720911, 0, 65537, 720912, 0, 65537, 720913, 0, 65537, 720914, 0, 65537, 720915, 0, 65537, 720916, 0, 65537, 720917, 0, 65537, 720918, 0, 65537, 720919, 0, 65537, 720920, 0, 65537, 720921, 0, 65537, 720922, 0, 65537, 720923, 0, 65537, 720924, 0, 65537, 720925, 0, 65537, 720926, 0, 65538, 851962, 0, 65536, 851963, 0, 65537, 851964, 0, 65537, 851965, 0, 65537, 851966, 0, 65537, 851967, 0, 65537, 786432, 0, 65537, 786433, 0, 65537, 786434, 0, 65537, 786435, 0, 65537, 786436, 0, 65537, 786437, 0, 65537, 786438, 0, 65537, 786439, 0, 65537, 786440, 0, 65537, 786441, 0, 65537, 786442, 0, 65537, 786443, 0, 65537, 786444, 0, 65537, 786445, 0, 65537, 786446, 0, 65537, 786447, 0, 65537, 786448, 0, 65537, 786449, 0, 65537, 786450, 0, 65537, 786451, 0, 65537, 786452, 0, 65537, 786453, 0, 65537, 786454, 0, 65537, 786455, 0, 65537, 786456, 0, 65537, 786457, 0, 65537, 786458, 0, 65537, 786459, 0, 65537, 786460, 0, 65537, 786461, 0, 65537, 786462, 0, 65538, 917498, 0, 65536, 917499, 0, 65537, 917500, 0, 65537, 917501, 0, 65537, 917502, 0, 65537, 917503, 0, 65537, 851968, 0, 65537, 851969, 0, 65537, 851970, 0, 65537, 851971, 0, 65537, 851972, 0, 65537, 851973, 0, 65537, 851974, 0, 65537, 851975, 0, 65537, 851976, 0, 65537, 851977, 0, 65537, 851978, 0, 65537, 851979, 0, 65537, 851980, 0, 65537, 851981, 0, 65537, 851982, 0, 65537, 851983, 0, 65537, 851984, 0, 65537, 851985, 0, 65537, 851986, 0, 65537, 851987, 0, 65537, 851988, 0, 65537, 851989, 0, 65537, 851990, 0, 65537, 851991, 0, 65537, 851992, 0, 65537, 851993, 0, 65537, 851994, 0, 65537, 851995, 0, 65537, 851996, 0, 65537, 851997, 0, 65537, 851998, 0, 65538, 983034, 0, 65536, 983035, 0, 65537, 983036, 0, 65537, 983037, 0, 65537, 983038, 0, 65537, 983039, 0, 65537, 917504, 0, 65537, 917505, 0, 65537, 917506, 0, 65537, 917507, 0, 65537, 917508, 0, 65537, 917509, 0, 65537, 917510, 0, 65537, 917511, 0, 65537, 917512, 0, 65537, 917513, 0, 65537, 917514, 0, 65537, 917515, 0, 65537, 917516, 0, 65537, 917517, 0, 65537, 917518, 0, 65537, 917519, 0, 65537, 917520, 0, 65537, 917521, 0, 65537, 917522, 0, 65537, 917523, 0, 65537, 917524, 0, 65537, 917525, 0, 65537, 917526, 0, 65537, 917527, 0, 65537, 917528, 0, 65537, 917529, 0, 65537, 917530, 0, 65537, 917531, 0, 65537, 917532, 0, 65537, 917533, 0, 65537, 917534, 0, 65538, 1048570, 0, 65536, 1048571, 0, 65537, 1048572, 0, 65537, 1048573, 0, 65537, 1048574, 0, 65537, 1048575, 0, 65537, 983040, 0, 65537, 983041, 0, 65537, 983042, 0, 65537, 983043, 0, 65537, 983044, 0, 65537, 983045, 0, 65537, 983046, 0, 65537, 983047, 0, 65537, 983048, 0, 65537, 983049, 0, 65537, 983050, 0, 65537, 983051, 0, 65537, 983052, 0, 65537, 983053, 0, 65537, 983054, 0, 65537, 983055, 0, 65537, 983056, 0, 65537, 983057, 0, 65537, 983058, 0, 65537, 983059, 0, 65537, 983060, 0, 65537, 983061, 0, 65537, 983062, 0, 65537, 983063, 0, 65537, 983064, 0, 65537, 983065, 0, 65537, 983066, 0, 65537, 983067, 0, 65537, 983068, 0, 65537, 983069, 0, 65537, 983070, 0, 65538, 1114106, 0, 65536, 1114107, 0, 65537, 1114108, 0, 65537, 1114109, 0, 65537, 1114110, 0, 65537, 1114111, 0, 65537, 1048576, 0, 65537, 1048577, 0, 65537, 1048578, 0, 65537, 1048579, 0, 65537, 1048580, 0, 65537, 1048581, 0, 65537, 1048582, 0, 65537, 1048583, 0, 65537, 1048584, 0, 65537, 1048585, 0, 65537, 1048586, 0, 65537, 1048587, 0, 65537, 1048588, 0, 65537, 1048589, 0, 65537, 1048590, 0, 65537, 1048591, 0, 65537, 1048592, 0, 65537, 1048593, 0, 65537, 1048594, 0, 65537, 1048595, 0, 65537, 1048596, 0, 65537, 1048597, 0, 65537, 1048598, 0, 65537, 1048599, 0, 65537, 1048600, 0, 65537, 1048601, 0, 65537, 1048602, 0, 65537, 1048603, 0, 65537, 1048604, 0, 65537, 1048605, 0, 65537, 1048606, 0, 65538, 1179642, 0, 131072, 1179643, 0, 131073, 1179644, 0, 131073, 1179645, 0, 131073, 1179646, 0, 131073, 1179647, 0, 131073, 1114112, 0, 131073, 1114113, 0, 131073, 1114114, 0, 131073, 1114115, 0, 131073, 1114116, 0, 131073, 1114117, 0, 131073, 1114118, 0, 131073, 1114119, 0, 131073, 1114120, 0, 131073, 1114121, 0, 131073, 1114122, 0, 131073, 1114123, 0, 131073, 1114124, 0, 131073, 1114125, 0, 131073, 1114126, 0, 131073, 1114127, 0, 131073, 1114128, 0, 131073, 1114129, 0, 131073, 1114130, 0, 131073, 1114131, 0, 131073, 1114132, 0, 131073, 1114133, 0, 131073, 1114134, 0, 131073, 1114135, 0, 131073, 1114136, 0, 131073, 1114137, 0, 131073, 1114138, 0, 131073, 1114139, 0, 131073, 1114140, 0, 131073, 1114141, 0, 131073, 1114142, 0, 131074 )

[node name="PlayerCreation" parent="." instance=ExtResource( 3 )]
position = Vector2( 504, 186 )
scale = Vector2( 5, 5 )

[node name="btn_SkinColor" type="Button" parent="."]
margin_left = 16.0
margin_top = 32.0
margin_right = 168.0
margin_bottom = 74.251
text = "Skin Color"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_Eyes" type="Button" parent="."]
margin_left = 16.0
margin_top = 96.0
margin_right = 168.0
margin_bottom = 138.251
text = "Eyes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_Mouth" type="Button" parent="."]
margin_left = 192.0
margin_top = 96.0
margin_right = 344.0
margin_bottom = 138.251
text = "Mouth"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_Headwear" type="Button" parent="."]
margin_left = 16.0
margin_top = 168.0
margin_right = 168.0
margin_bottom = 210.251
text = "Headwear"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_Facialhair" type="Button" parent="."]
margin_left = 192.0
margin_top = 168.0
margin_right = 344.0
margin_bottom = 210.251
text = "Facial Hair"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_Enterworld" type="Button" parent="."]
margin_left = 464.0
margin_top = 328.0
margin_right = 616.0
margin_bottom = 370.251
text = "Explore"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="btn_SkinColor" to="." method="_on_btn_SkinColor_pressed"]
[connection signal="pressed" from="btn_Eyes" to="." method="_on_btn_Eyes_pressed"]
[connection signal="pressed" from="btn_Mouth" to="." method="_on_btn_Mouth_pressed"]
[connection signal="pressed" from="btn_Headwear" to="." method="_on_btn_Headwear_pressed"]
[connection signal="pressed" from="btn_Facialhair" to="." method="_on_btn_Facialhair_pressed"]
[connection signal="pressed" from="btn_Enterworld" to="." method="_on_btn_Enterworld_pressed"]

[editable path="PlayerCreation"]
[editable path="PlayerCreation/PlayerParts"]
[editable path="PlayerCreation/AllPlayers"]
[editable path="PlayerCreation/AllPlayers/OtherPlayers3"]
